Use Bootstrap 5for the style

--- a/html/afficherQuestions.html
+++ b/html/afficherQuestions.html
@@ -1,2 +1,9 @@
-<h1>Affichage des questions</h1>
-{Questions}
+<div class="container p-4 " id="featured-3">
+    <h1 class="pb-3 border-bottom text-center">Questions</h1>
+    <div class="row row-cols-1 row-cols-lg-4 mt-3">
+        {Questions}
+    </div>
+</div>
+
+
+    
