--- a/html/index.html
+++ b/html/index.html
@@ -1,2 +1,11 @@
-<h1>hello</h1>
-    
+<div class="px-4 py-5 my-5 text-center">
+    <img class="d-block mx-auto mb-4" src="/ressources/images/img-questionnaire.jpg" alt="rubixcube" width="72" height="57">
+    <h1 class="display-5 fw-bold text-body-emphasis">Accueil</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">Bienvenue sur le site Questionnaire réalisé en Node.js !</p>
+        <p>Découvre vite en quoi cela consiste : </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="" class="btn btn-primary btn-lg px-4 gap-3">Voir les questions</a>
+        </div>
+    </div>
+</div>
