--- a/html/common/footer.html
+++ b/html/common/footer.html
@@ -1,3 +1,10 @@
+    <div class="container">
+        <footer class="py-5 border-top">
+            <p class="text-center text-body-secondary">© 2023 Questionnaire</p>
+        </footer>
+    </div>
+
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
