--- a/html/common/header.html
+++ b/html/common/header.html
@@ -7,7 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,400;1,700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
     <title>Questionnaire</title>
 </head>
+
 <body>
+    <!-- Navigation -->
+    <div class="container">
+        <header class="d-flex justify-content-center py-3 border-bottom ">
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="/index.html" class="nav-link">Accueil</a></li>
+                <li class="nav-item"><a href="/afficherQuestions.html" class="nav-link">Les questions</a></li>
+            </ul>
+        </header>
+    </div>
